都市をクリックしたときの情報を通知できるように

--- a/client/src/components/style/map.css
+++ b/client/src/components/style/map.css
@@ -8,7 +8,7 @@
     cursor:default;
 }
 
-.bottomInformation {
+.hoverInformation {
     display: inline-block;
     position: absolute;
     margin: 12px auto;
