change coordinate position

--- a/client/src/components/style/coodinate.css
+++ b/client/src/components/style/coodinate.css
@@ -1,12 +1,8 @@
 .coodinate {
-    display: inline-block;
-    position: absolute;
-    margin-top: 12px;
-    margin-left: -48%;
-    background-color: #d1d1d1;
+    margin-top: 16px;
     color: #292929;
-    z-index: 2 !important;
     padding: 8px;
     font-size: large;
+    text-decoration: underline;
     /* font-weight: bold; */
 }
