--- a/client/src/components/style/coodinate.css
+++ b/client/src/components/style/coodinate.css
@@ -2,7 +2,7 @@
     margin-top: 16px;
     color: #292929;
     padding: 8px;
-    font-size: large;
+    font-size: x-large;
     text-decoration: underline;
     /* font-weight: bold; */
 }
