add day rows on warning figure

--- a/client/src/components/style/period.css
+++ b/client/src/components/style/period.css
@@ -7,6 +7,10 @@
     grid-template-columns: 12rem repeat(8, 1fr);
 }
 
+.arealabel {
+    border-bottom: 2px solid black;
+}
+
 .datetime {
     display: flex;
     justify-content: center;
