--- a/client/src/components/style/App.css
+++ b/client/src/components/style/App.css
@@ -45,7 +45,8 @@
 }
 
 .canvas-menu {
-  background-color: #dfdfdf;
+  overflow: scroll;
+  background-color: #ffffff;
   top: 0;
   bottom: 0;
   width: 100%;
