--- a/client/src/components/style/period.css
+++ b/client/src/components/style/period.css
@@ -1,6 +1,6 @@
 .outline {
     border: 2px solid rgb(60,60,60);
-    margin: 0 10%;
+    border-bottom: 1px solid rgb(60, 60, 60);
 }
 .grid {
     display: grid;
