--- a/client/src/components/style/label.css
+++ b/client/src/components/style/label.css
@@ -1,12 +1,16 @@
 .label-area {
-    margin-top: 0.5rem;
+    margin-top: 2rem;
+    margin-left: 5rem;
 }
 
 .label {
     display: inline-block;
     padding: 0.3rem;
-    margin: 0 0.25rem;
-    border-radius: 1rem;
+    margin-right: 0.5rem;
+    text-align: left;
+    border-radius: 0.25rem;
+    font-weight: bold;
+    letter-spacing: 0.1rem;
 }
 
 .default {
@@ -22,8 +26,8 @@
 
 .warning {
     color: white;
-    border: rgb(233, 84, 107) 1px solid;
-    background-color: rgb(233, 84, 107);
+    border: rgb(191, 13, 13) 1px solid;
+    background-color: rgb(191, 13, 13);
 }
 
 .emergency {
